# cmake_tutorial

./: .gitignore  CMakeLists.txt  configure.sh  miyataconfig.h  miyataconfig.h.in  run.sh
src/: main.cpp
src/Adder/: adder.cpp
